--- a/src/test/config/application.properties
+++ b/src/test/config/application.properties
@@ -1,10 +1,10 @@
 //Application Variables
 browser=chrome
 
-
 //Page Locators- Home page
 SignInLink_HomePage= classname, login
 TshirtLink_HomePage= xpath, //div[@id = 'block_top_menu']/ul/li/a[@title = 'T-shirts']
+SignOut_HomePage= classname, logout
 
 //Page Locators- SignUp Page
 EmailAddressField_SignUpPage = id, email_create
@@ -26,7 +26,6 @@ AddressAlias_YourAddressSection = id , alias
 SubmitButton_SignUpPage = id, submitAccount
 WarningForInvalidPhoneNumber_SignUpPage= xpath, //div[@id='center_column']/div/descendant::b[contains(text(), 'phone_mobile')]
 
-
 //Page Locators- Tshirt page
 TshirtLabel_TshirtPage = xpath, //h1[@class= 'page-heading product-listing']/span[contains(text(), 'T-shirts')]
 Item_TshirtPage = xpath, //ul[@class = 'product_list grid row']//div[@class = 'product-image-container']
@@ -45,7 +44,9 @@ backToOrdersButton = xpath, //a[@title = 'Back to orders']
 orderCompletionDetails = classname, box
 
 //Page Locators- Order History page
-currentOrderDetails_OrderHistoryPage = xpath, //tr[@class ='first_item ']/td[
+currentOrderReference_OrderHistoryPage = xpath, //tr[@class ='first_item ']/td[1]/a
+currentOrderDate_OrderHistoryPage = xpath, //tr[@class ='first_item ']/td[2]
+currentOrderTotalPrice_OrderHistoryPage = xpath, //tr[@class ='first_item ']/td[3]/span
 
 //Page Locators- SignIn page
 Usernam_SignInPage= id, email
@@ -54,8 +55,3 @@ SignInButton_SignInPage= id, SubmitLogin
 
 //Page Locators- MyAccount page
 OrderHistory_MyAcntPage= CSS, .icon-list-ol
-
-//Page Locators- Blog page
-RecentPosts_BlogPage = xpath, //h4[text()='Recent Posts']
-
-//Page Locators- T-shirts page
